# tfwrapper

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .release-please-manifest.json  .tool-versions  CHANGELOG.md  Makefile  README.md  conftest.py  data.json  endpoint.json  mise.toml  pyproject.toml  release-please-config.json  renovate.json  requirements-azure.in  requirements-azure.txt  requirements.in  requirements.txt  setup.cfg  test_cache_requests.py  test_command_foreach.py  test_config.py  test_config_load.py  test_custom_providers.py  test_gcp_gke.py  test_get_terraform_last_patch.py  test_helpers.py  test_parse_args.py  test_search_on_github.py  test_terraform_versions.json  test_wrapper.py  tox.ini
.github/: dependabot.yml
.github/workflows/: main.yml  release.yml
htmlcov/: class_index.html  d_da630d57efa56a78___init___py.html  d_da630d57efa56a78_azure_py.html  d_da630d57efa56a78_utils_py.html  function_index.html  index.html  status.json  z_da630d57efa56a78___init___py.html  z_da630d57efa56a78_azure_py.html  z_da630d57efa56a78_utils_py.html
scripts/: merge-dependabot-mrs.sh  release.sh
src/claranet_tfwrapper/: __init__.py  azure.py  tunnels.py  utils.py
src/tfwrapper/: __init__.py
tests/: conftest.py  test_azure.py  test_cache_requests.py  test_command_bootstrap_from_global_stack_dir.py  test_command_bootstrap_from_root.py  test_command_bootstrap_from_stack_dir.py  test_command_foreach.py  test_completion.py  test_config.py  test_config_detect.py  test_config_load.py  test_config_stack.py  test_config_stacks.py  test_config_stacks_states.py  test_config_state.py  test_config_wrapper.py  test_custom_providers.py  test_gcp_gke.py  test_get_architecture.py  test_get_terraform_last_patch.py  test_helpers.py  test_parse_args.py  test_search_on_github.py  test_terraform_commands.py  test_utils_format_env.py  test_version.py  test_wrapper.py
