[tool.poetry]
name = "claranet-tfwrapper"
version = "13.2.3"
description = "Claranet's `tfwrapper` is a wrapper for [Terraform](https://www.terraform.io/) implemented in python which aims to simplify Terraform usage and enforce best practices"
authors = []
license = "Mozilla Public License Version 2.0"
readme = "README.md"
homepage = "https://github.com/claranet/tfwrapper"
keywords = ["terraform", "wrapper"]

# For reference, see https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
argcomplete = "<4.0"
boto3 = "^1.17.94"
cachecontrol = {extras = ["filecache"], version = "^0.14.0"}
colorlog = ">=5.0.1,<7.0.0"
jinja2 = "^3.0.1"
lockfile = "^0.12.2"
natsort = ">=7.1.1,<9.0.0"
packaging = ">=24,<25"
pyyaml = "^6.0.1"
requests = "^2.25.1"
schema = "^0.7.4"
semver = "^3.0.1"
termcolor = ">=1.1,<3.0"

[tool.poetry.group.test.dependencies]
black = "*"
coverage = "*"
flake8 = ">=6.0.0"
flake8-docstrings = "*"
flake8-pyproject = "*"
md-toc = "*"
mock = "*"
pook = ">=1.0.2"
pre-commit = "*"
pytest = "*"
pytest-mock = "*"
requests-mock = "*"
toml = "*"
tox = ">=4"

[tool.poetry.scripts]
tfwrapper = 'claranet_tfwrapper:main'

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Make sure to match flake8's max-line-length.
line-length = 130 # black's default
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
exclude = '''
/(
  \.git
  | \.pytest_cache
  | \.tox
  | \.venv
)/
'''

[tool.flake8]
verbose = 3
max-line-length = 130
per-file-ignores = ['tests/*.py:D103']
exclude = ['.git', '.tox', '.venv', '.virtualenv', '__pycache__']
# See https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
ignore = ['E203', 'W503']
enable-extensions = ['W504']
