[project]
name = "claranet-tfwrapper"
version = "14.0.2"
description = "Claranet's `tfwrapper` is a wrapper for [Terraform](https://www.terraform.io/) implemented in python which aims to simplify Terraform usage and enforce best practices"
authors = []
license = { text = "Mozilla Public License Version 2.0" }
readme = "README.md"
requires-python = ">=3.9,<4.0"
keywords = ["terraform", "wrapper"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
dependencies = [
  "argcomplete<4.0",
  "boto3>=1.17.94,<2.0.0",
  "cachecontrol[filecache]>=0.14.0,<0.15.0",
  "colorlog>=5.0.1,<7.0.0",
  "jinja2>=3.0.1,<4.0.0",
  "lockfile>=0.12.2,<0.13.0",
  "natsort>=7.1.1,<9.0.0",
  "packaging>=24,<25",
  "pyyaml>=6.0.1,<7.0.0",
  "requests>=2.25.1,<3.0.0",
  "schema>=0.7.4,<0.8.0",
  "semver>=3.0.1,<4.0.0",
  "termcolor>=1.1,<3.0",
]

[project.urls]
homepage = "https://github.com/claranet/tfwrapper"

[project.scripts]
tfwrapper = "claranet_tfwrapper:main"

[tool.poetry]
# Poetry-specific configurations that don't fit in the PEP-621 schema

[tool.poetry.group.test.dependencies]
coverage = "*"
md-toc = "*"
mock = "*"
pook = ">=1.0.2"
pre-commit = "*"
pytest = "*"
pytest-mock = "*"
requests-mock = "*"
ruff = "*"
toml = "*"
tox = ">=4"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
  ".git",
  ".tox",
  ".venv",
  ".virtualenv",
  "__pycache__",
  "venv",
  "build",
  ".eggs",
  "setup.py",
]
line-length = 130
lint.ignore = []
lint.per-file-ignores."tests/*.py" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "E501",
]
lint.select = ["D", "E", "F", "W"]
target-version = "py39"
